/*
 * Copyright (C) 2021 Kian Cross
 * Copyright (C) 2021 Robert Mardall
 *
 * This file is part of Unifed.
 *
 * Unifed is free software: you can redistribute it and/or modify it
 * under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Unifed is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with Unifed.  If not, see <https://www.gnu.org/licenses/>.
 */

import renderer from "react-test-renderer";
import { MarkdownEditor } from "./MarkdownEditor";

test("Render", () => {
  const component = renderer.create(<MarkdownEditor />);
  const tree = component.toJSON();

  expect(tree).toMatchSnapshot();
});

test("Render default value", () => {
  const value = `# Hello World\n` + `**Bold Text**`;

  const component = renderer.create(<MarkdownEditor value={value} />);
  const tree = component.toJSON();

  expect(tree).toMatchSnapshot();
});
